--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <body>
         <p>好きな食べ物は麻婆豆腐です。</p>
         <p>好きな動物はハシビロコウです。</p>
+        <p>好きなスポーツはバドミントンと卓球です。</p>
     </body>
 </html>
